Add results to builders